--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,7 @@ body {
   background-image: url("../images/search.svg");
   background-repeat: no-repeat;
   background-position: left 25px center;
+  color: var(--text-color);
   border: none;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562443);
 }
