--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
     background-image: url("../images/search.svg");
     background-repeat: no-repeat;
     background-position: left 25px center;
+    color: var(--text-color);
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562443);
 }
