--- a/scss/_verables.scss
+++ b/scss/_verables.scss
@@ -1,6 +1,6 @@
 :root{
     --main-font-weight: 400;
     --main-bg-color: #fff;
-    --site-bg-color: #f2f2f2;
+    --site-bg-color: #fafafa;
     --text-color: #111517;
 }
